--- a/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
+++ b/HitomiScrollViewerLib/Views/TagFilterEditor.xaml
@@ -8,105 +8,58 @@
     xmlns:views="using:HitomiScrollViewerLib.Views"
     xmlns:models="using:HitomiScrollViewerLib.Models"
     mc:Ignorable="d"
-    RowSpacing="8"
+    ColumnSpacing="8"
     >
-    <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
-        <RowDefinition Height="*"/>
-        <RowDefinition Height="Auto"/>
-        <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <Grid x:Name="CrudOperationGrid" ColumnSpacing="8">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="2*"/>
-        </Grid.ColumnDefinitions>
-        <Border/>
-        <Button x:Name="CreateButton"
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="2*"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="3*"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="2*"/>
+    </Grid.ColumnDefinitions>
+    <Border/>
+    <Button x:Name="CreateButton"
                 Command="{x:Bind ViewModel.CreateButtonCommand}">
-            <SymbolIcon Symbol="Add"/>
-        </Button>
-        <Button x:Name="RenameButton"
+        <SymbolIcon Symbol="Add"/>
+    </Button>
+    <Button x:Name="RenameButton"
                 IsEnabled="False"
                 Command="{x:Bind ViewModel.RenameButtonCommand}"
                 >
-            <SymbolIcon Symbol="Edit"/>
-        </Button>
-        <ComboBox DisplayMemberPath="Name"
+        <SymbolIcon Symbol="Edit"/>
+    </Button>
+    <ComboBox DisplayMemberPath="Name"
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                   Visibility="Collapsed"
                   SelectedItem="{x:Bind ViewModel.SelectedTagFilter, Mode=TwoWay}"
                   >
-        </ComboBox>
-        <Button x:Name="SaveButton"
+    </ComboBox>
+    <Button x:Name="SaveButton"
                 IsEnabled="False"
                 Command="{x:Bind ViewModel.SaveButtonCommand}"
                 >
-            <SymbolIcon Symbol="Save"/>
-            <Button.KeyboardAccelerators>
-                <KeyboardAccelerator Key="S" Modifiers="Control" />
-            </Button.KeyboardAccelerators>
-        </Button>
-        <Button x:Name="DeleteButton"
+        <SymbolIcon Symbol="Save"/>
+        <Button.KeyboardAccelerators>
+            <KeyboardAccelerator Key="S" Modifiers="Control" />
+        </Button.KeyboardAccelerators>
+    </Button>
+    <Button x:Name="DeleteButton"
                 Command="{x:Bind ViewModel.DeleteButtonCommand}"
                 >
-            <SymbolIcon Symbol="Delete"/>
-        </Button>
-        <CheckBox x:Name="AutoSaveCheckBox"
-                  Padding="16 0"
-                  HorizontalAlignment="Center"
-                  VerticalContentAlignment="Center"
-                  IsChecked="{x:Bind ViewModel.CommonSettings.IsTFAutoSaveEnabled, Mode=TwoWay}">
-            <TextBlock TextWrapping="WrapWholeWords" Text="{x:Bind ViewModel.AutoSaveCheckBoxText}"/>
-        </CheckBox>
-    </Grid>
-    <Grid x:Name="TextBoxesGrid"
-          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-          BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-          CornerRadius="{StaticResource OverlayCornerRadius}"
-          BorderThickness="1"
-          Padding="16"
-          VerticalAlignment="Stretch">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-    </Grid>
-    <Grid x:Name="LanguageTypeKeywordGrid" ColumnSpacing="16">
+        <SymbolIcon Symbol="Delete"/>
+    </Button>
+    <Grid Padding="16 0"
+          HorizontalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="Select Language:"/>
-        <ComboBox HorizontalAlignment="Stretch"
-                  DisplayMemberPath="LocalName"
-                  ItemsSource="{x:Bind ViewModel.GalleryLanguages}"
-                  SelectedIndex="{x:Bind ViewModel.GalleryLanguageSelectedIndex, Mode=TwoWay}"
-                  />
-        <TextBlock Text="Select Type:"/>
-        <ComboBox HorizontalAlignment="Stretch"
-                  DisplayMemberPath="DisplayName"
-                  ItemsSource="{x:Bind ViewModel.GalleryTypeEntities}"
-                  SelectedIndex="{x:Bind ViewModel.GalleryTypeSelectedIndex, Mode=TwoWay}"
-                  />
-        <TextBlock Text="Search by Title:"/>
-        <TextBox HorizontalAlignment="Stretch" Text="{x:Bind ViewModel.SearchTitleText, Mode=TwoWay}" />
-    </Grid>
-    <Grid ColumnSpacing="8">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <views:TFSSelector Grid.Column="0" ViewModel="{x:Bind ViewModel.IncludeTFSelectorVM}"/>
-        <views:TFSSelector Grid.Column="1" ViewModel="{x:Bind ViewModel.ExcludeTFSelectorVM}"/>
+        <ToggleSwitch Grid.Column="0"
+                      IsOn="{x:Bind ViewModel.IsTFAutoSaveEnabled, Mode=TwoWay}"/>
+        <TextBlock x:Uid="/TagFilterEditor/TFAutoSaveTextBlock"
+                   Grid.Column="1"
+                   TextWrapping="WrapWholeWords"/>
     </Grid>
 </Grid>
