--- a/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
@@ -15,77 +15,35 @@
     <ScrollViewer VerticalAlignment="Stretch">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid ColumnSpacing="8" RowSpacing="8"
-                  Padding="16" Grid.Row="0">
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="7*"/>
+                    <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <views:TagFilterEditor ViewModel="{x:Bind ViewModel.TagFilterEditorVM}"
-                                       Grid.Column="0"/>
-                <Grid Grid.Column="1"
-                      VerticalAlignment="Stretch"
-                      RowSpacing="16">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Button x:Name="CreateGalleryFilterButton"
-                                Grid.Row="0"
-                                BorderBrush="Magenta"
-                                HorizontalAlignment="Stretch"
-                                Padding="16"
-                                Command="{x:Bind ViewModel.CreateGalleryFilterCommand}">
-                        <TextBlock FontSize="{StaticResource SubtitleTextBlockFontSize}"
-                                   Text="Create Gallery Filter"/>
-                    </Button>
-                    <Border Grid.Row="1"
-                            Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                            BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                            CornerRadius="{StaticResource OverlayCornerRadius}">
-                        <ItemsRepeater Grid.Row="1" ItemsSource="{x:Bind ViewModel.SearchFilterVMs}">
-                            <ItemsRepeater.Layout>
-                                <StackLayout Spacing="4"/>
-                            </ItemsRepeater.Layout>
-                            <ItemsRepeater.ItemTemplate>
-                                <DataTemplate x:DataType="vms:SearchFilterVM">
-                                    <Grid ColumnSpacing="16">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Button Grid.Column="0"
-                                                Command="{x:Bind HandleSearchFilterClickCommand}">
-                                            <views:SearchFilterView ViewModel="{x:Bind}"/>
-                                        </Button>
-                                        <AppBarButton Grid.Column="1"
-                                                    Command="{x:Bind DeleteCommand}"
-                                                    CommandParameter="{x:Bind}">
-                                        </AppBarButton>
-                                    </Grid>
-                                </DataTemplate>
-                            </ItemsRepeater.ItemTemplate>
-                        </ItemsRepeater>
-                    </Border>
-                </Grid>
+                <views:QueryBuilderView Grid.Column="0" ViewModel="{x:Bind ViewModel.QueryBuilderVM}"/>
+                <Button Grid.Column="1"
+                        VerticalAlignment="Stretch"
+                        Command="{x:Bind ViewModel.FilterGalleriesCommand}">
+                    <SymbolIcon Symbol="Filter"/>
+                </Button>
             </Grid>
             <Grid HorizontalAlignment="Stretch" Grid.Row="1">
                 <Button HorizontalAlignment="Left">
-                    <SymbolIcon Symbol="Sort"></SymbolIcon>
+                    <SymbolIcon Symbol="Sort"/>
                 </Button>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <TextBlock x:Name="PageTextBlock"/>
-                    <ComboBox ItemsSource="{x:Bind ViewModel.PageIndexes, Mode=OneWay}"
-                              SelectedIndex="{x:Bind ViewModel.PageIndex, Mode=TwoWay}"/>
+                    <ComboBox ItemsSource="{x:Bind ViewModel.Pages, Mode=OneWay}"
+                              SelectedIndex="{x:Bind ViewModel.SelectedPageIndex, Mode=TwoWay}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <TextBlock x:Name="PageSizeTextBlock"/>
                     <ComboBox ItemsSource="{x:Bind ViewModel.PageSizes, Mode=OneWay}"
-                              SelectedIndex="{x:Bind ViewModel.PageSize, Mode=TwoWay}"/>
+                              SelectedIndex="{x:Bind ViewModel.SelectedPageSizeIndex, Mode=TwoWay}"/>
                 </StackPanel>
             </Grid>
             <ItemsRepeater ItemsSource="{x:Bind ViewModel.CurrentGalleryBrowseItemVMs}" Grid.Row="2">
