--- a/HitomiScrollViewerLib/Views/QueryBuilderView.xaml
+++ b/HitomiScrollViewerLib/Views/QueryBuilderView.xaml
@@ -13,6 +13,7 @@
         <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
     <Grid x:Name="TextBoxesGrid"
+          Grid.Row="0"
           Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
           BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
           CornerRadius="{StaticResource OverlayCornerRadius}"
@@ -25,6 +26,7 @@
         </Grid.RowDefinitions>
     </Grid>
     <Grid x:Name="LanguageTypeKeywordGrid"
+          Grid.Row="1"
           ColumnSpacing="16"
           Padding="16">
         <Grid.ColumnDefinitions>
