--- a/HitomiScrollViewerLib/Views/TagTokenizingTextBox.xaml
+++ b/HitomiScrollViewerLib/Views/TagTokenizingTextBox.xaml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--x:Name="Root"-->
 <ct:TokenizingTextBox
+    x:Name="Root"
     x:Class="HitomiScrollViewerLib.Views.TagTokenizingTextBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -17,7 +16,7 @@
     TextChanged="{x:Bind ViewModel.TokenizingTextBox_TextChanged}"
     GotFocus="{x:Bind ViewModel.TokenizingTextBox_GotFocus}"
     TokenItemAdding="{x:Bind ViewModel.TokenizingTextBox_TokenItemAdding}"
-    Text="{x:Bind ViewModel.Text}"
+    Text="{x:Bind ViewModel.Text, Mode=TwoWay}"
     TokenDelimiter=""
     >
     <ct:TokenizingTextBox.QueryIcon>
@@ -26,17 +25,15 @@
     <ct:TokenizingTextBox.SuggestedItemTemplate>
         <DataTemplate x:DataType="entities:Tag">
             <TextBlock Text="{x:Bind Value}"
-                       MaxWidth="{Binding DataContext.TokenTextBlockMaxWidth, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay}"
+                       MaxWidth="{Binding Path=ViewModel.TokenTextBlockMaxWidth, ElementName=Root, Mode=OneWay}"
                        TextWrapping="Wrap"/>
         </DataTemplate>
     </ct:TokenizingTextBox.SuggestedItemTemplate>
     <ct:TokenizingTextBox.TokenItemTemplate>
         <DataTemplate x:DataType="entities:Tag">
             <TextBlock Text="{x:Bind Value}"
-                       MaxWidth="{Binding DataContext.TokenTextBlockMaxWidth, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay}"
+                       MaxWidth="{Binding Path=ViewModel.TokenTextBlockMaxWidth, ElementName=Root, Mode=OneWay}"
                        TextWrapping="Wrap"/>
-                       <!-- TODO test MaxWidth binding working-->
-                       <!--MaxWidth="{Binding Path=ViewModel.TokenTextBlockMaxWidth, ElementName=Root, Mode=OneWay}"-->
         </DataTemplate>
     </ct:TokenizingTextBox.TokenItemTemplate>
 </ct:TokenizingTextBox>
