--- a/HitomiScrollViewerLib/Views/PageViews/SearchPage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/SearchPage.xaml
@@ -20,7 +20,7 @@
         <Grid Grid.Column="0" RowSpacing="8" Padding="16">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <views:TagFilterEditor ViewModel="{x:Bind ViewModel.TagFilterEditorVM}"
@@ -100,7 +100,7 @@
                              Grid.Column="0"
                              TextWrapping="Wrap"
                              AcceptsReturn="True"
-                             Text="{x:Bind ViewModel.DownloadInputText, Mode=TwoWay}"/>
+                             Text="{x:Bind ViewModel.DownloadInputText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <Button x:Name="DownloadButton"
                             Grid.Column="1" Padding="32"
                             HorizontalAlignment="Center" VerticalAlignment="Center"
