--- a/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryBrowseItem.xaml
+++ b/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryBrowseItem.xaml
@@ -5,7 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:bpvs="using:HitomiScrollViewerLib.Views.BrowsePageViews"
+    xmlns:views="using:HitomiScrollViewerLib.Views"
+    xmlns:vms="using:HitomiScrollViewerLib.ViewModels"
     >
     <UserControl.Resources>
         <Color x:Key="DoujinshiColor0">#663333</Color>
@@ -32,64 +33,83 @@
         <Color x:Key="AnimeColor1">#99cc99</Color>
         <Color x:Key="AnimeColor2">#ccffcc</Color>
     </UserControl.Resources>
-    <Grid Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+    <Grid x:Name="RootGrid"
+          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
           BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-          CornerRadius="{StaticResource ControlCornerRadius}"
+          CornerRadius="{StaticResource OverlayCornerRadius}"
           BorderThickness="1"
-          Margin="8"
-          Padding="8 0"
-          x:Name="RootGrid">
+          Margin="8">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="300"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid Background="{x:Bind TitleBackgroundBrush}"
-              HorizontalAlignment="Stretch">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0"
-                       Style="{StaticResource SubtitleTextBlockStyle}"
-                       Text="{x:Bind ViewModel.Gallery.Title}"
-                       HorizontalAlignment="Stretch"
-                       TextAlignment="Left"/>
-            <TextBlock Grid.Column="1"
-                       Style="{StaticResource SubtitleTextBlockStyle}"
-                       Text="{x:Bind ViewModel.Gallery.Id}"
-                       HorizontalAlignment="Stretch"
-                       TextAlignment="Right"/>
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0"
+                  Background="{x:Bind TitleBackgroundBrush}"
+                  HorizontalAlignment="Stretch"
+                  Padding="8 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0"
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           Text="{x:Bind ViewModel.Gallery.Title}"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="1"
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           Text="{x:Bind ViewModel.Gallery.Id}"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Center"/>
+            </Grid>
+            <Grid Grid.Row="1"
+                  Background="{x:Bind SubtitleBackgroundBrush}"
+                  HorizontalAlignment="Stretch"
+                  Padding="8 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0"
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           Foreground="{x:Bind TextForegroundBrush}"
+                           Text="{x:Bind ViewModel.Gallery.GalleryLanguage.LocalName}"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="1"
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           Foreground="{x:Bind TextForegroundBrush}"
+                           Text="{x:Bind ViewModel.Gallery.GalleryType.DisplayName}"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Center"/>
+            </Grid>
         </Grid>
-        <Grid Background="{x:Bind SubtitleBackgroundBrush}"
-              HorizontalAlignment="Stretch">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0"
-                       Style="{StaticResource BodyStrongTextBlockStyle}"
-                       Foreground="{x:Bind TextForegroundBrush}"
-                       Text="{x:Bind ViewModel.Gallery.GalleryLanguage.LocalName}"
-                       HorizontalAlignment="Stretch"
-                       TextAlignment="Left"/>
-            <TextBlock Grid.Column="1"
-                       Style="{StaticResource SubtitleTextBlockStyle}"
-                       Foreground="{x:Bind TextForegroundBrush}"
-                       Text="{x:Bind ViewModel.Gallery.GalleryType.DisplayName}"
-                       HorizontalAlignment="Stretch"
-                       TextAlignment="Right"/>
+        <Grid Grid.Row="1" Padding="8">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="300"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Row="0">
+                <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
+                <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
+                <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
+            </StackPanel>
+            <ItemsRepeater Grid.Row="1"
+                           ItemsSource="{x:Bind ViewModel.TagItemsRepeaterVMs}">
+                <ItemsRepeater.Layout>
+                    <StackLayout Spacing="4"/>
+                </ItemsRepeater.Layout>
+                <ItemsRepeater.ItemTemplate>
+                    <DataTemplate x:DataType="vms:TagItemsRepeaterVM">
+                        <views:TagItemsRepeater ViewModel="{x:Bind}"/>
+                    </DataTemplate>
+                </ItemsRepeater.ItemTemplate>
+            </ItemsRepeater>
         </Grid>
-        <StackPanel Orientation="Horizontal">
-            <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
-            <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
-            <Image Source="ms-appx:///Assets/LockScreenLogo.scale-200.png"/>
-        </StackPanel>
-        <ItemsRepeater ItemsSource="{x:Bind ViewModel.TagItemsRepeaterVMs}">
-            <ItemsRepeater.Layout>
-                <StackLayout Orientation="Vertical"/>
-            </ItemsRepeater.Layout>
-        </ItemsRepeater>
     </Grid>
 </UserControl>
