--- a/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryBrowseItem.xaml
+++ b/HitomiScrollViewerLib/Views/BrowsePageViews/GalleryBrowseItem.xaml
@@ -33,12 +33,10 @@
         <Color x:Key="AnimeColor1">#99cc99</Color>
         <Color x:Key="AnimeColor2">#ccffcc</Color>
     </UserControl.Resources>
-    <Grid x:Name="RootGrid"
-          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+    <Grid Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
           BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
           CornerRadius="{StaticResource OverlayCornerRadius}"
-          BorderThickness="1"
-          Margin="8">
+          BorderThickness="1">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -51,7 +49,7 @@
             <Grid Grid.Row="0"
                   Background="{x:Bind TitleBackgroundBrush}"
                   HorizontalAlignment="Stretch"
-                  Padding="8 0">
+                  Padding="8 4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -70,7 +68,7 @@
             <Grid Grid.Row="1"
                   Background="{x:Bind SubtitleBackgroundBrush}"
                   HorizontalAlignment="Stretch"
-                  Padding="8 0">
+                  Padding="8 4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
