--- a/HitomiScrollViewerLib/Views/TagItemsRepeater.xaml
+++ b/HitomiScrollViewerLib/Views/TagItemsRepeater.xaml
@@ -9,12 +9,12 @@
     xmlns:ct="using:CommunityToolkit.WinUI.Controls"
     >
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="128"/>
-        <ColumnDefinition/>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="18*"/>
     </Grid.ColumnDefinitions>
     <TextBlock Grid.Column="0"
                Text="{x:Bind ViewModel.CategoryLabel}"
-               Style="{StaticResource BodyTextBlockStyle}"/>
+               Style="{StaticResource BodyStrongTextBlockStyle}"/>
     <UserControl Grid.Column="1">
         <ItemsRepeater ItemsSource="{x:Bind ViewModel.TagDisplayString}">
             <ItemsRepeater.Layout>
