--- a/HitomiScrollViewerLib/Views/SearchFilterView.xaml
+++ b/HitomiScrollViewerLib/Views/SearchFilterView.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<StackPanel
+<Grid
     x:Class="HitomiScrollViewerLib.Views.SearchFilterView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,15 +8,10 @@
     mc:Ignorable="d"
     xmlns:views="using:HitomiScrollViewerLib.Views"
     xmlns:vms="using:HitomiScrollViewerLib.ViewModels"
-    Orientation="Vertical">
-    <TextBlock Text="{x:Bind ViewModel.GalleryLanguageText}"/>
-    <TextBlock Text="{x:Bind ViewModel.GalleryTypeText}"/>
-    <ItemsRepeater ItemsSource="{x:Bind ViewModel.SearchFilterTagsRepeaterVMs}">
-        <ItemsRepeater.ItemTemplate>
-            <DataTemplate x:DataType="vms:SearchFilterTagsRepeaterVM">
-                <views:SearchFilterTagsRepeater ViewModel="{x:Bind}"/>
-            </DataTemplate>
-        </ItemsRepeater.ItemTemplate>
-    </ItemsRepeater>
-    <TextBlock Text="{x:Bind ViewModel.SearchTitleText}"/>
-</StackPanel>
+    RowSpacing="2"
+    ColumnSpacing="16">
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="*"/>
+    </Grid.ColumnDefinitions>
+</Grid>
