--- a/HitomiScrollViewerLib/Views/QueryBuilderView.xaml
+++ b/HitomiScrollViewerLib/Views/QueryBuilderView.xaml
@@ -9,7 +9,7 @@
     xmlns:vms="using:HitomiScrollViewerLib.ViewModels"
     >
     <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
+        <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
     <Grid x:Name="TextBoxesGrid"
@@ -18,8 +18,7 @@
           BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
           CornerRadius="{StaticResource OverlayCornerRadius}"
           BorderThickness="1"
-          Padding="16"
-          VerticalAlignment="Stretch">
+          Padding="16">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
